# CMake file for BlendInt project
#

add_subdirectory(Object)

add_subdirectory(Bezier)
add_subdirectory(Button)
add_subdirectory(Dialog)
add_subdirectory(NumericalSlider)
add_subdirectory(Menu)
add_subdirectory(FileButton)
add_subdirectory(MenuButton)
add_subdirectory(Viewport)
add_subdirectory(FrameSplitter)
add_subdirectory(ToolBox)
add_subdirectory(Frame)
#add_subdirectory(ToolBar)
add_subdirectory(TextEntry)

add_subdirectory(NodeView)
add_subdirectory(FileSystemModel)
add_subdirectory(FileBrowser)

add_subdirectory(Panel)
add_subdirectory(Clock)
add_subdirectory(ComboBox)

add_subdirectory(PopupFrame)
add_subdirectory(ColorSelector)
add_subdirectory(FileSelector)

add_subdirectory(Workspace)
add_subdirectory(Thread)
add_subdirectory(TimeRuler)
add_subdirectory(HorizontalLayout)
add_subdirectory(Time)

add_subdirectory(Performance)

if(ENABLE_OPENCV)
	add_subdirectory(CVVideoViewport)
endif()

#add_subdirectory(ClockWidget)
#add_subdirectory(Layout)
#add_subdirectory(Stack)
#add_subdirectory(Timer)
#add_subdirectory(Viewport3D)
#add_subdirectory(VerticalLayout)
#add_subdirectory(StockIcon)
#add_subdirectory(MenuBin)
#add_subdirectory(Widget)
#add_subdirectory(Context)
#add_subdirectory(Texture2D)
#add_subdirectory(Window)
#add_subdirectory(ToggleButton)
#add_subdirectory(GLRenderbuffer)
#add_subdirectory(AbstractForm)
#add_subdirectory(ImageView)
#add_subdirectory(TextureFont)
#add_subdirectory(Freetype)
#add_subdirectory(Label)
#add_subdirectory(MenuBar)
#add_subdirectory(ScrollView)
#add_subdirectory(ScrollBar)
#add_subdirectory(Image)
#add_subdirectory(Slider)
#add_subdirectory(ScrollArea)
#add_subdirectory(Tab)
#add_subdirectory(TabButton)
#add_subdirectory(ButtonGroup)
#add_subdirectory(ColorWheel)
#add_subdirectory(Splitter)
#add_subdirectory(Theme)
#add_subdirectory(Expander)
#add_subdirectory(TextureAtlas)
#add_subdirectory(ListModel)
#add_subdirectory(StringListModel)
#add_subdirectory(ListView)
#add_subdirectory(CVImageView)
#add_subdirectory(Section)
#add_subdirectory(ToolButton)
#add_subdirectory(HBlock)

add_subdirectory(Block)
